2006-03-28  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(paint): Call paintMenuItem with the selectionBackground as
	parameter.
	(paintBackground): Fixed the condition and color for the background
	painting.

2006-03-28  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalTabbedPaneUI.java
	(tabsOpaque): New field.
	(paintLeftTabBorder): Paint some parts only when the tabs are
	opaque. Determine the tab background using the paintLeftTabBorder()
	helper method.
	(paintRightTabBorder): Likewise.
	(installDefaults): Fetch tabsOpaque property from the UIDefaults.

2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/rmi/activation/ActivationGroup_Stub.java:
	Made final.
	
2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/io/CharArrayWriter.java:
	(append(char)): Documented.
	(append(CharSequence)): Likewise.
	(append(CharSequence,int,int)): Likewise.

2006-03-27  Tom Tromey  <tromey@redhat.com>
       
	* java/io/CharArrayWriter.java (append): New overloads.
	
2006-03-27  Lillian Angel  <langel@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_nativeDispose):
	Added check for colormap. Prevents assertion error.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_setFGColor):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_nativeCopyState):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_initState__II):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_initFromImage):
	Likewise.
	(Java_gnu_java_awt_peer_gtk_GdkGraphics_initStateUnlocked):
	Likewise.

2006-03-27  Dalibor Topic  <robilad@kaffe.org>

	* m4/acinclude.m4 (CLASSPATH_FIND_JAVAC): Use 
	AC_MSG_ERROR instead of echoing the error message 
	that no compiler has been found manually.

2006-03-27  Roman Kennke  <kennke@aicas.com>

	* javax/swing/RepaintManager.java
	(commitBuffer): Use simple drawImage() method instead of the
	scaling version.
